# RI_Project

./: .gitignore  README.md  pyproject.toml  test_data_load.ipynb
Notebooks/: Testset_exploration.ipynb  articles_gold  dbpedia_w2v_training.ipynb  trainset_exploration.ipynb
Testset/benchmarkY2test-auto-manual-qrels/benchmarkY2test/: benchmarkY2test-entity-manual.qrels  benchmarkY2test-goldarticles.cbor  benchmarkY2test-goldpassages.cbor
benchmarkY2test-auto-manual-qrels/benchmarkY2test/: README.mkd  benchmarkY2test-entity-automatic.qrels  benchmarkY2test-entity-lenient.qrels  benchmarkY2test-entity-with-passage-manual.qrels  benchmarkY2test-goldpassages.qrels  benchmarkY2test-psg-lenient.qrels  benchmarkY2test-psg-manual.qrels
python/: functions.py
