[project]
name = "rital"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cbor2>=5.9.0",
    "dd>=0.6.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "trec-car-tools>=2.6",
]
